# xmachine

./: Cargo.toml  README.md
src/: benchmark.rs  bin.rs  compile_test.rs  function.rs  lib.rs  machine.rs  value.rs
test/: closures.rs  from.rs  function.rs  object.rs  value.rs
tests/: church.rs  closure.rs  iterative.rs  object.rs  value.rs
