[package]
name = "xmachine"
version = "0.1.1"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A fast, cross platform virtual machine implemented in Rust without the Standard Library"
categories = ["no-std", "development-tools::ffi", "development-tools", "embedded"]
readme = "README.md"
homepage = "https://github.com/adam-mcdaniel/xmachine"
repository = "https://github.com/adam-mcdaniel/xmachine"
# We also have to comment out default-run
# because `cargo tarpaulin` can't parse TOML
# default-run = "xasm"

# We have to set doctest false package wide.
# For some reason, `cargo test` can't find a 
# global memory allocator when building doctests.
[lib]
doctest = false


[[bin]]
name = "xasm"
path = "src/bin.rs"


[[test]]
name = "function"
path = "test/function.rs"

[[test]]
name = "church"
path = "test/church.rs"

[[test]]
name = "iterative"
path = "test/iterative.rs"

[[test]]
name = "object"
path = "test/object.rs"

[[test]]
name = "from"
path = "test/from.rs"

[[test]]
name = "value"
path = "test/value.rs"


[dependencies]
