[package]
name = "xmachine"
version = "0.1.13"
authors = ["adam-mcdaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A fast, cross platform virtual machine implemented in Rust without the Standard Library"
categories = ["no-std", "development-tools::ffi", "development-tools", "embedded"]
readme = "README.md"
homepage = "https://github.com/adam-mcdaniel/xmachine"
repository = "https://github.com/adam-mcdaniel/xmachine"
# We also have to comment out default-run
# because `cargo tarpaulin` can't parse TOML
# default-run = "xasm"

# We have to set doctest false package wide.
# For some reason, `cargo test` can't find a 
# global memory allocator when building doctests.
[lib]
doctest = false


[dependencies]
